这是第六次提交，修改了认识GIT.html文件

--- a/认识GIT.html
+++ b/认识GIT.html
@@ -54,7 +54,21 @@
 
         11.生成ssh密匙
           ssh-keygen -t rsa -C "github邮箱地址"
-        
+        windows电脑查找文件: 我的电脑 => 用户 => 用户名文件夹 => .ssh(隐藏文件) => id_rsa.pub(存有密匙)
+
+        12、github账户配置密匙
+
+        13、暂存区 => 远程仓库
+        git remote add origin https://github.com/BullFei/testDemo.git
+        git push -u origin master
+
+        【注】提交过程，可能需要你输入用户名，密码。
+
+        14、git clone
+        从远程仓库，克隆项目到本地
+
+        15、git pull
+        从远程仓库同步本地代码(更新)
 
        */
         </script>
